[package]
name = "vu-meter"
version = "1.0.0"
authors = ["Jonas Berlin <xkr47@outerspace.dyndns.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34"
jack = "0.10.0"
nix = "0.17.0"

[dependencies.xcb]
version = "0.9"
default-features = true
features = ["thread"]
