[package]
name = "vu-meter"
version = "1.0.0"
authors = ["Jonas Berlin <xkr47@outerspace.dyndns.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = [ "derive" ] }
jack = "0.11"
nix = { version = "0.28", features = [ "signal" ] }

[dependencies.xcb]
version = "0.9"
default-features = true
features = ["thread"]
